--- a/posts/my-first-post/index.qmd
+++ b/posts/my-first-post/index.qmd
@@ -1,9 +1,9 @@
 ---
-title: "My first post"
-author: "Harlow Malloc"
-date: "2024-03-28"
+title: "from Support to Development"
+author: "Peter Szykalski"
+date: "2024-02-28"
 categories: [code, analysis]
-image: "image.jpg"
+image: "GE_Chicago.jpg"
 ---
 
 This is a post with executable code.
