--- a/posts/my-header/index.qmd
+++ b/posts/my-header/index.qmd
@@ -9,4 +9,4 @@ This is the first post in a Quarto blog. Welcome!
 
 ![](Pablo_Guernica.jpg)
 
-Since this post doesn't specify an explicit `image`, the first image in the post will be used in the listing page of posts.
+I always make lough that Pablo knew sth more about coming digital IT revolution hence he invented the Cubism. Here in Guernica from 1937, Cubism sought to depict subjects from multiple viewpoints simultaneously, breaking them down into geometric shapes and fragments. While "Guernica" does bear elements of Cubism, it also incorporates elements of Surrealism due to its dreamlike and symbolic imagery.
