--- a/posts/my-header/index.qmd
+++ b/posts/my-header/index.qmd
@@ -12,5 +12,5 @@ I always make lough that Pablo knew sth more about coming digital IT revolution 
 
 
 :::{.callout-tip}
-* more on Guernica](https://www.pablopicasso.org/guernica.jsp)
+* [more on Guernica](https://www.pablopicasso.org/guernica.jsp)
 :::
