about little modification

--- a/about.qmd
+++ b/about.qmd
@@ -16,5 +16,5 @@ about:
 
 ---
 
-Hi I'm Peter Szykalski.<br />This blog aims to be the showcase of my interests, so not just technological but also other shades of my live. (...) Time will be critical in what is presented here so don't be discouraged right at the begining. Visit this space from time to time - Cheers.
+Hi I'm Peter.<br />This blog aims to be the showcase of my interests, so not just technological but also other shades of my live. (...) Time will be critical in what is presented here so don't be discouraged right at the begining. Visit this space from time to time - Cheers.
 
