--- a/posts/WoL/index.qmd
+++ b/posts/WoL/index.qmd
@@ -38,5 +38,33 @@ if you see this:
 execute the command: ```ethtool -s %i wol g```  where  ```i%``` is the name of your active network interface. Now you are ready to wake up your computer remotely but only once. After you start your computer again the procedure needs to be repeated. Yeap, you need to automate this and do this persistent every time you turn on a computer.
 
 ### WoL persistent
+go to: ```/etc/systemd/system``` use sudo and touch the file `wol@.service`
+and put into what follows:
+
+```bash
+[Unit]
+Description=Wake-on-LAN for %i
+Requires=network.target
+After=network.target network-online.target
+
+[Service]
+Restart=on-failure
+RestartSec=10s
+ExecStart=/usr/bin/ethtool -s %i wol g
+Type=simple
+
+[Install]
+WantedBy=multi-user.target
+```
+Next enable the service: 
+`sudo systemctl enable wol@enp1s0.service`
+where `enp1s0 replace with your name for the network card
+
+Next start the service:
+`sudo systemctl start wol@enp1s0.service`
+
+
+
+
 
 in progress ...
