--- a/posts/mistake/index.qmd
+++ b/posts/mistake/index.qmd
@@ -12,6 +12,8 @@ image: "pink_floyd.jpg"
 
 After HR recruiters asked me why I have a half a year blank spot in my CV I decided to reveal the truth. On the first of October 2023, I started Physics studies faculty Photnics at the [Warsaw University of Technology](https://eng.pw.edu.pl).
 
+![](my_photnics_id.jpg){.lightbox)
+
 My dream was to follow Niels Bohr's footsteps but really, the power of Light convinced me. IMHO the discovery world right now is on the quantum level size where the light is the key player. The laser story is just amazing. 50 years after [Einstein predicted](https://www.britannica.com/technology/laser/History) the creation of such an instrument finally [Theodore Maiman](https://en.wikipedia.org/wiki/Laser) did it in 1960. It was just the beginning of the silent revolution, the next Big Thing after the transistor was discovered in 1942  by [William Shockley](https://pl.wikipedia.org/wiki/William_Shockley) with a team. Today it is even hard to imagine the World without the Lasers. Lasers are everywhere. Laser devices cut metal, are used in medicine and most important laser beams can transfer Information. An interesting example of laser usage is the femtosecond laser. Their beam is incredibly fast and powerful hence avoidance of thermal effect is possible, it is crucial when you influence with the beam on a substrate with the expectation of ultra-high precision and micro scale. The light has changed the telecommunications we know today and will be the main driver in this industry for the next fifty years, not only because of Fiber technology but of course because of lasers that right now are introduced in Outerspace communication for example gradually on new batches of [Starlink satellites](https://hackaday.com/2024/02/05/starlinks-inter-satellite-laser-links-are-setting-new-record-with-42-million-gb-per-day). Without the Optics, we won't be able to speed up our next-generation processors, particularly AI processors. Some movements towards new technological breakthroughs happen in chip interconnections. An early explorer of this technology is [Ayarlabs](https://ayarlabs.com) company showcasing 4 Tbps Optical FPGA Demo. 
 
 So those are only a few reasons why I decided to study Photonics. Every kid on this lucky Planet called Earth knows that the Light it is a source of energy for every living plant or creature and is indispensable. Nevertheless, my plan to become the next photonic engineer has finished after half a year. Studies were possible only in full-day mode and I could not find a job that allowed me to share my scientific desire.
