--- a/posts/mistake/index.qmd
+++ b/posts/mistake/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "not the biggest mistake"
+title: "why physics"
 author: "Peter Szykalski"
 date: "2024-05-25"
 categories: [comfort zone]
