--- a/posts/comet/index.qmd
+++ b/posts/comet/index.qmd
@@ -17,4 +17,4 @@ Shutter Speed: 4.91 (1/30 sec)
 ISO Speed Ratings: 403
 ```
 
-The phenomenon of passing comet in the CET time zone in the southwestern part of my sky lasted for several Earth days. However, I wanted to record somehow characteristic tail for the comet. Stellarium app helped to locate the position of the C/2023 A3 (Tsuchinshan-ATLAS) comet. The challenge was to take a photo because, in my time zone, it was already a very dark night. With help came a cell phone.
+The phenomenon of passing comet in the CET time zone in the southwestern part of my sky lasted for several Earth days. However, I wanted to record somehow characteristic tail for the comet. Stellarium app helped to locate the position of the C/2023 A3 (Tsuchinshan-ATLAS) comet. The challenge was to take a photo because, in my time zone, it was already a very dark night. With help came the cell phone.
