--- a/posts/comet/index.qmd
+++ b/posts/comet/index.qmd
@@ -9,7 +9,7 @@ categories: [space]
 
 ### the phone did the job
 
-The phenomenon of passing comet in the CET time zone in the southwestern part of my sky lasted for several Earth days. However, I wanted to record somehow characteristic tail for the comet. Stellarium app helped to locate the position of the C/2023 A3 (Tsuchinshan-ATLAS) comet. The challenge was to take a photo because, in my time zone, it was already a very dark night. With help came the cell phone.
+The phenomenon of passing comet in the CET time zone in the southwestern part of my sky lasted for several Earth days. However, I wanted to record somehow characteristic tail of the comet. Stellarium app helped to locate the position of the C/2023 A3 (Tsuchinshan-ATLAS) comet. The challenge was to take a photo because, in my time zone, it was already a very dark night. With help came the cell phone.
 
 ```bash
 Exposure time: 30 sec
